	* STM32 F4:  Add DMA support to the ADC driver for STM32 F4.  From
	  Max Kriegler (2015-07-30).
	* sem_tickwait():  Added this function for internal use within the
	  OS.  It is a non-standard but more efficient version of sem_timedwait()
	  for use in higher performance device drivers (2015-08-01).
	* drivers/net/slip.c:  Fix another compilation error (2015-08-02).
	* drivers/can.c include/nuttx/can.h, and fs/fs.h:  Add CAN IOCTL command
	  definitions to manage CAN message filtering (2015-08-05)
	* drivers/Kconfig and can.c:  Add configuration to support DLC to byte
	  conversions needed for CAN FD mode (2015-08-05).
	* arch/arm/src/samv7:  Add an MCAN driver for the SAMV7 platform
	  (2015-08-06).
	* drivers/sensors/lm92.c and include/nuttx/sensors/lm92.h:  Add a driver
	  for the LM92 temperature sensor.  Contributed by Paul Alexander Patience
	  (2015-08-06).
	* drivers/sensors/as5048b.c and include/nuttx/sensors/as5048b.h: Add
	  support for an AS5048B rotary magnetic sensor.  From Paul Alexander
	  Patience (2015-08-07).
	* include/nuttx/spi/slave.h:  Add a definition of an SPI slave
	  interface (2015-08-08).
	* arch/arm/src/samv7: Add the framework for an SPI slave drvier.  This
	  driver has a lot of missing logic on initial commit (2015-08-09).
	* arch/arm/src/samv7: Basic, no-DMA SPI slave driver is in place
	  (2015-08-10).
	* fs/vfs/epoll.c and include/sys/epoll.h: Add a very simple epoll layer
	  just around poll calls. To satisfy build app requirements.  From Anton
	  D. Kachalov (2015-08-10).
	* drivers/mtd/ramtron.c:  Update to include supportf for newer
	  RAMTRON parts.  From David Sidrane (2015-08-10).
	* Networking:  Allow receipt of empty UDP packets.  From Max Neklyudov
	  (2015-08-11).
	* drivers/sensors/mb7040.c and include/nuttx/sensors/mb7040.h: Add
	  support Added MB7040 sonar.  From Paul Alexander Patience (2015-08-11).
	* net/udp:  Add support for send() for connected UDP sockets
	  (2015-08-11).
